--- a/src/components/MovieCast/MovieCast.module.css
+++ b/src/components/MovieCast/MovieCast.module.css
@@ -1,1 +1,20 @@
+.castList {
+    margin-top: 20px;
+}
 
+.castItem {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.castItem img {
+    width: 100px;
+    height: 150px;
+    object-fit: cover;
+    margin-right: 20px;
+}
+
+.castItem p {
+    margin: 0;
+}
